--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-native": "0.72.5",
     "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-camera": "~13.4.4",
+    "expo-contacts": "~12.2.0",
+    "expo-sms": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
