--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.22.0",
     "expo-camera": "~13.4.4",
     "expo-contacts": "~12.2.0",
-    "expo-sms": "~11.4.0"
+    "expo-sms": "~11.4.0",
+    "expo-speech": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
