--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.7",
+    "expo-camera": "~13.4.4",
+    "expo-contacts": "~12.2.0",
     "expo-location": "~16.1.0",
+    "expo-sms": "~11.4.0",
+    "expo-speech": "~11.3.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
@@ -23,11 +29,7 @@
     "react-native": "0.72.5",
     "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-camera": "~13.4.4",
-    "expo-contacts": "~12.2.0",
-    "expo-sms": "~11.4.0",
-    "expo-speech": "~11.3.0"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
